Assure that no reloading is done if KDirLister emits a redirection, only change the the URL. Thanks to David Faure and Albert Alstals Cid for the detailed analysis!

BUG: 155591

svn path=/trunk/KDE/kdebase/apps/; revision=875554